syntax = "proto3";
package realms;
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "dto.proto";

option java_multiple_files = true;
option java_package = "me.sitech.integration.domain.module.realm";

service RealmService {
  rpc AddRealm (AddRealmRequest) returns (RealmResponse) {};

  rpc GetRealms (google.protobuf.Empty) returns (RealmsResponse) {};

  rpc GetRealmByName (RealmNameRequest) returns (RealmResponse) {};

  rpc AddRealmGroup (AddRealmGroupRequest) returns (AddRealmGroupResponse) {};

  rpc GetRealmGroupByName (AddRealmGroupRequest) returns (GetRealmGroupResponse) {};

  rpc GetRealmUsers(RealmNameRequest) returns (RealmUserResponse) {};

  rpc GetRealmGroups(RealmNameRequest) returns (GetRealmGroupsResponse) {};

  rpc GetRealmClients(RealmNameRequest) returns (GetRealmClientsResponse) {};

  rpc GetRealmRoles(RealmNameRequest) returns (GetRealmRolesResponse) {};

  rpc LogoutAllUsers(RealmNameRequest) returns (StatusResponse) {};
}

message StatusResponse{
  int64 status = 1;
}

message RealmRequest {
  google.protobuf.Struct realmInfo = 1;
}

message RealmResponse {
  me.sitech.integration.domain.module.RealmDto realmDto = 1;
}

message RealmsResponse {
  repeated me.sitech.integration.domain.module.RealmDto realmDto = 1;
}

message AddRealmRequest {
  string realmName = 1;
  string displayName = 2;
}

message RealmNameRequest{
  string realmName = 1;
}

message RealmGeneralResponse{
  string statusCode = 1;
  string response = 2;
}

message AddGroupResponse{
  string statusCode = 1;
  string response = 2;
}

message AddRealmGroupRequest{
  string realmName = 1;
  string groupName = 2;
}

message AddRealmGroupResponse{
  int64 status = 1;
}

message RealmUserResponse{
  repeated me.sitech.integration.domain.module.UserDto userDto = 1;
}

message GetRealmGroupsResponse{
  repeated me.sitech.integration.domain.module.GroupDto groupDto = 1;
}

message GetRealmClientsResponse{
  repeated me.sitech.integration.domain.module.ClientDto clientDto = 1;
}

message GetRealmRolesResponse{
  repeated me.sitech.integration.domain.module.RoleDto roleDto = 1;
}

message GetRealmGroupResponse{
  me.sitech.integration.domain.module.GroupDto groupDto = 1;
}